--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,15 @@ header {
 
   padding-top: 188px;
   padding-bottom: 188px;
+
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/main_page/hero/hero_bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .hero-title {
