--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   --title-text-color: #2e2f42;
   --hero-text-color: #ffffff;
   --white: #ffffff;
+  --customers-border: #8e8f99;
   --footer-logo-color: #f4f4fd;
   --footer-text-color: #e7e9fc;
   --accent-color: #4d5ae5;
@@ -29,8 +30,12 @@ body {
 }
 
 .section {
-  padding-top: 0;
+  padding-top: 120px;
   padding-bottom: 120px;
+}
+
+.section:nth-child(2) {
+  padding-bottom: 0;
 }
 
 .section-title {
@@ -193,6 +198,8 @@ header {
   color: var(--hero-text-color);
   background-color: var(--accent-color);
   padding: 16px 32px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .hero .button:hover,
@@ -217,6 +224,14 @@ header {
 .feature-list-item {
   flex-basis: calc(100% / 4 - var(--list-gap));
   margin-left: var(--list-gap);
+}
+
+.feature-list-item .icon {
+  background-color: var(--footer-logo-color);
+  border-radius: 4px;
+  max-width: 100%;
+  padding: 24px 100px;
+  margin-bottom: 8px;
 }
 
 .feature-list-item p {
@@ -249,7 +264,6 @@ header {
 /* Team */
 .section:nth-child(4) {
   background-color: var(--footer-text-color);
-  padding-top: 120px;
 }
 
 .team-list {
@@ -264,10 +278,14 @@ header {
 
   flex-basis: calc(100% / 4 - var(--list-gap));
   margin-left: var(--list-gap);
+
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-card {
-  padding: 32px 0;
+  padding-top: 32px;
+  margin-bottom: 8px;
 }
 
 .team-list-item h3 {
@@ -285,6 +303,41 @@ header {
 
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.social-media {
+  padding: 0 16px 32px 16px;
+}
+
+.social-media-list {
+  display: flex;
+  margin-left: calc(-1 * var(--list-gap));
+}
+
+.social-media-list li {
+  flex-basis: calc(100% / 4 - var(--list-gap));
+  margin-left: var(--list-gap);
+
+  background-color: var(--accent-color);
+}
+
+.social-media .icon {
+  fill: currentColor;
+}
+
+/* Customers */
+.customers-list {
+  display: flex;
+  margin-left: calc(-1 * var(--list-gap));
+}
+
+.customers-list-item {
+  /* flex-basis: calc(100% / 6 - var(--list-gap)); */
+  width: 168px;
+  margin-left: var(--list-gap);
+
+  border: 1px solid var(--customers-border);
+  border-radius: 4px;
 }
 
 /* Footer */
@@ -330,14 +383,18 @@ footer p {
 
 .filter-list-item .button {
   padding: 12px 24px;
+  border: 1px solid var(--footer-text-color);
 }
 
 .filter-list-item .button:hover,
 .filter-list-item .button:focus {
   color: var(--white);
   background-color: var(--portfolio-button-bgc);
-  border: 1px solid var(--footer-text-color);
+  border: 1px solid var(--portfolio-button-bgc);
   border-radius: 4px;
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button-text {
@@ -358,6 +415,14 @@ footer p {
   flex-basis: calc(100% / 3 - var(--list-gap));
   margin-top: calc(2 * var(--list-gap));
   margin-left: var(--list-gap);
+
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.project-list-item:hover,
+.project-list-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .project-list-item h2 {
